--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="xlistview_header_hint_loading">正在加载...</string>
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
+    <string name="xlistview_footer_hint_finish">暂无更多内容</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     <string name="action_settings">设置</string>
     <string name="title_activity_login">登录</string>
@@ -44,5 +45,7 @@
     <string name="smoothlistview_header_last_time">上次更新时间：</string>
     <string name="smoothlistview_footer_hint_normal">查看更多</string>
     <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
+    <string name="title_item_list">Items</string>
+    <string name="title_item_detail">Item Detail</string>
 
 </resources>
